--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
+  <title>Yeshwanti - Portfolio</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-amber-300">
-    Hello world!
-  </h1>
+<body class="bg-gray-900 text-white">
+
+    <!-- Navbar -->
+    <nav class="flex justify-between items-center px-8 py-4 fixed w-full z-20 bg-gray-900 shadow-2xl">
+        <h1 class="text-purple-500 font-bold text-4xl p-3">Yeshwanti Padmanabhan</h1>
+        <ul class="flex space-x-6 text-white p-2 text-xl">
+            <li class="hover:text-purple-500 "><a href="#home">Home</a></li>
+            <li class="hover:text-purple-500"><a href="#about">About</a></li>
+            <li class="hover:text-purple-500"><a href="#projects">Projects</a></li>
+            <li class="hover:text-purple-500"><a href="#resume">Resume</a></li>
+        </ul>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="flex flex-col md:flex-row items-center justify-between px-8 pt-24 md:pt-32 min-h-screen">
+        
+        <!-- Text -->
+        <div class="md:w-1/2 space-y-4 -mt-17 ml-10">
+            <h1 class="text-4xl md:text-6xl font-bold">Hi, I am <span class="text-purple-500">Yeshwanti</span></h1>
+            <p class="text-purple-400 text-2xl font-bold">Frontend Developer</p>
+            <p class="text-white max-w-lg pt-3 pb-3">Passionate developer creating amazing digital experiences with modern technologies. Welcome to my creative space where innovation meets functionality.</p>
+            <div class="space-x-4 mt-4">
+                <a href="#about" class="bg-purple-500 text-white px-6 py-2 rounded-lg hover:bg-purple-600 transition">About Me</a>
+                <a href="#projects" class="border border-purple-500 text-purple-500 px-6 py-2 rounded-lg hover:bg-purple-500 hover:text-white transition">&lt;/&gt; My Work</a>
+            </div>
+        </div>
+
+        <!-- Profile Image -->
+        <div class="md:w-1/2 relative -mt-20 flex justify-center">
+          <div class="rounded-full w-80 h-80 border-3 border-purple-500 overflow-hidden">
+            <img src="../Assests/Photot.JPG" alt="Yeshwanti" class="w-full h-full object-cover ">
+          </div>
+        </div>
+
+            <!-- Icons around image -->
+            <div class="absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-1/2 flex space-x-6">
+                <div class="bg-purple-500 p-3 rounded-full"><svg class="w-6 h-6 text-white" fill="currentColor"><!-- Example icon --></svg></div>
+                <div class="bg-purple-500 p-3 rounded-full"><svg class="w-6 h-6 text-white" fill="currentColor"></svg></div>
+                <div class="bg-purple-500 p-3 rounded-full"><svg class="w-6 h-6 text-white" fill="currentColor"></svg></div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Technologies Section -->
+    <section id="technologies" class="px-8 py-16">
+        <h2 class="text-2xl md:text-3xl font-bold text-center mb-8 text-purple-500">Technologies I Work With</h2>
+        <div class="grid grid-cols-2 md:grid-cols-6 gap-6 justify-items-center">
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">JavaScript</div>
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">Java</div>
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">Python</div>
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">Figma</div>
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">CSS3</div>
+            <div class="bg-gray-800 p-6 rounded-lg text-center w-32">HTML5</div>
+        </div>
+    </section>
+
 </body>
 </html>
