Pushed assets to src

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <!-- Photo -->
         <div class="md:w-1/2 mt-12 md:mt-0 flex justify-center" data-aos="fade-left">
             <div class="rounded-full w-80 h-80 md:w-96 md:h-96 border-4 border-cyan-500 overflow-hidden shadow-2xl">
-                <img src="../Assests/Photot.JPG" alt="Yeshwanti" class="w-full h-full object-cover">
+                <img src="./Assests/Photot.JPG" alt="Yeshwanti" class="w-full h-full object-cover">
             </div>
         </div>
     </section>
@@ -72,7 +72,7 @@
             <div class="flex flex-col md:flex-row items-center justify-center gap-10 md:gap-16">
                 <!-- Image Column -->
                 <div class="md:w-1/3">
-                    <img id="tab-image" src="../Assests/journey.png" alt="Developer Illustration" class="rounded-lg shadow-2xl " data-aos="fade-right">
+                    <img id="tab-image" src="./Assests/journey.png" alt="Developer Illustration" class="rounded-lg shadow-2xl " data-aos="fade-right">
                 </div>
 
                 <!-- Tabs and Content Column -->
@@ -143,7 +143,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
             <a href="https://github.com/Yeshwanti/air-quality-index" target="_blank" class="block">
                 <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
-                    <img src="../Assests/proj1.png" alt="Project 1" class="w-full h-48 object-cover">
+                    <img src="./Assests/proj1.png" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-2 text-emerald-400">Air Quality Index</h3>
                         <p class="text-gray-400 mb-4">A web application that provides real-time AQI updates, health alerts, and predictive air quality forecasting for underserved regions. It integrates satellite and ground data to deliver accurate insights for public awareness.</p>
@@ -166,7 +166,7 @@
         <!-- Blog 1 -->
         <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-eb0bd334df8c" target="_blank" class="block">
             <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
-                <img src="../Assests/blog1.png" alt="When Machines Dream" class="w-full h-48 object-cover">
+                <img src="./Assests/blog1.png" alt="When Machines Dream" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h3 class="text-xl font-bold mb-2 text-emerald-400">When Machines Dream:When Intelligence Became Artificial</h3>
                     <p class="text-gray-400 mb-4">
@@ -180,7 +180,7 @@
         <!-- Blog 2: AI Winter -->
         <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-bca05e20e794" target="_blank" class="block">
             <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
-                <img src="../Assests/blog2.png" alt="AI Winter Period" class="w-full h-48 object-cover">
+                <img src="./Assests/blog2.png" alt="AI Winter Period" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h3 class="text-xl font-bold mb-2 text-emerald-400">When Machines Dream: The AI Winter</h3>
                     <p class="text-gray-400 mb-4">
@@ -225,7 +225,7 @@
                     <p class="text-gray-400">Projects</p>
                 </div>
             </div>
-            <a href="../Assests/Resume-Yeshwanti Padmanabhan .pdf" download class="bg-custom-green text-emerald-400 px-8 py-3 rounded-lg hover:bg-sky-300 transition inline-block">Download Resume</a>
+            <a href="./Assests/Resume-Yeshwanti Padmanabhan .pdf" download class="bg-custom-green text-emerald-400 px-8 py-3 rounded-lg hover:bg-sky-300 transition inline-block">Download Resume</a>
         </div>
     </section>
     
