--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                     <!-- Tabs -->
                     <div class="flex space-x-6 border-b border-gray-700 mb-6">
                         <button class="tab-link active text-lg font-semibold py-2 px-1 focus:outline-none border-b-2 border-cyan-500"
-                            onclick="openTab(event, 'journey')">My Journey</button>
+                            onclick="openTab(event, 'journey')"> My Journey </button>
                         <button class="tab-link text-lg font-semibold py-2 px-1 border-b-2 border-transparent"
                             onclick="openTab(event, 'technical-skills')">Technical Skills</button>
                         <button class="tab-link text-lg font-semibold py-2 px-1 focus:outline-none border-b-2 border-transparent"
@@ -141,7 +141,7 @@
     <section id="projects" class="py-20 px-8 md:px-16 bg-custom-gray">
         <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-custom-green">My Projects</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
-            <a href="https://github.com/Yeshwanti/air-quality-index" target="_blank" class="block">
+            <a href="https://github.com/Shivani-Varma1408/air-quality-forecast-app" target="_blank" class="block">
                 <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
                     <img src="./Assests/proj1.png" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -164,7 +164,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
 
         <!-- Blog 1 -->
-        <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-eb0bd334df8c" target="_blank" class="block">
+        <a href="https://medium.com/@yeshwanti.pm" target="_blank" class="block">
             <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
                 <img src="./Assests/blog1.png" alt="When Machines Dream" class="w-full h-48 object-cover">
                 <div class="p-6">
@@ -177,7 +177,7 @@
             </div>
         </a>
 
-        <!-- Blog 2: AI Winter -->
+        <!-- Blog 2: AI Winter 
         <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-bca05e20e794" target="_blank" class="block">
             <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
                 <img src="./Assests/blog2.png" alt="AI Winter Period" class="w-full h-48 object-cover">
@@ -190,7 +190,33 @@
                 </div>
             </div>
         </a>
-
+      Blog 2: AI Winter 
+        <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-bca05e20e794" target="_blank" class="block">
+            <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
+                <img src="./Assests/blog2.png" alt="AI Winter Period" class="w-full h-48 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold mb-2 text-emerald-400">When Machines Dream: The AI Winter</h3>
+                    <p class="text-gray-400 mb-4">
+                        A look into the AI Winter — a period of slowed progress and reduced funding in AI research. 
+                        This blog explores the challenges, misconceptions, and lessons learned that shaped modern artificial intelligence.
+                    </p>
+                </div>
+            </div>
+        </a>
+        Blog 2: AI Winter 
+        <a href="https://medium.com/@yeshwanti.pm/when-machines-dream-bca05e20e794" target="_blank" class="block">
+            <div class="bg-sky-200 rounded-lg overflow-hidden shadow-lg group" data-aos="fade-up">
+                <img src="./Assests/blog2.png" alt="AI Winter Period" class="w-full h-48 object-cover">
+                <div class="p-6">
+                    <h3 class="text-xl font-bold mb-2 text-emerald-400">When Machines Dream: The AI Winter</h3>
+                    <p class="text-gray-400 mb-4">
+                        A look into the AI Winter — a period of slowed progress and reduced funding in AI research. 
+                        This blog explores the challenges, misconceptions, and lessons learned that shaped modern artificial intelligence.
+                    </p>
+                </div>
+            </div>
+        </a>
+    -->
     </div>
 </section>
 
@@ -213,17 +239,17 @@
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
                 <div class="text-center">
-                    <p class="text-4xl font-bold text-custom-green">4</p>
-                    <p class="text-gray-400">Years of Study</p>
+                    <p class="text-2xl font-bold text-custom-green">Email</p>
+                    <p class="text-gray-400">yeshwanti.pm@gmail.com</p>
                 </div>
                 <div class="text-center">
-                    <p class="text-4xl font-bold text-custom-green">5+</p>
-                    <p class="text-gray-400">Technologies</p>
+                    <p class="text-2xl font-bold text-custom-green">Contact</p>
+                    <p class="text-gray-400">+91 9444268657</p>
                 </div>
-                <div class="text-center">
+                <!--<div class="text-center">
                     <p class="text-4xl font-bold text-custom-green">2</p>
                     <p class="text-gray-400">Projects</p>
-                </div>
+                </div>-->
             </div>
             <a href="./Assests/Resume-Yeshwanti Padmanabhan .pdf" download class="bg-custom-green text-emerald-400 px-8 py-3 rounded-lg hover:bg-sky-300 transition inline-block">Download Resume</a>
         </div>
